# te-net-lib

./: .gitignore  Dockerfile.dev  README.md  justfile  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: ci.yaml  docs.yaml  image-dev.yaml  release.yaml
bench/: bench_graph_select.py  bench_lasso_path.py  bench_lasso_te.py  bench_ols_te.py  bench_preprocess_fn.py  common.py
examples/: quickstart_lasso.py  quickstart_lasso_path.py  quickstart_ols.py  quickstart_pipeline_raw_neutral.py
site/: index.html  search.js  te_net_lib.html
site/te_net_lib/: dgp.html  eval.html  graph.html  preprocess.html  rng.html  te.html
src/te_net_lib/dgp/: __init__.py  base.py  garch_factor.py  gaussian.py  planted_signal.py
src/te_net_lib/eval/: __init__.py  nio.py  stats.py
src/te_net_lib/graph/: __init__.py  edge_select.py  metrics.py
src/te_net_lib/preprocess/: __init__.py  factor_neutral.py
src/te_net_lib/rng/: __init__.py  core.py
src/te_net_lib/te/: __init__.py  knn_te.py  lasso_cd.py  lasso_te.py  linear_ols.py  model_selection.py  pipeline.py  te_score.py
tests/: conftest.py  test_dgp_garch_factor.py  test_dgp_gaussian.py  test_dgp_planted_signal.py  test_eval_nio.py  test_eval_stats.py  test_graph_edge_select.py  test_graph_metrics.py  test_preprocess_factor_neutral.py  test_rng_core.py  test_te_lasso_cd.py  test_te_lasso_te.py  test_te_model_selection.py  test_te_pipeline.py
