[project]
name = "te-net-lib"
version = "0.1.3"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
